mangosdk/src/test/resources/valid/SuperClass.java
import java.util.RandomAccess;

public class SuperClass implements RandomAccess {
	
}
